# FAR_MIG_scheduler

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
data/input_test/: kernels_rodinia.txt
include/: GPU_config.h  GPU_info.h  MIG_manager.h  logging.h  profiler.h  scheduler.h  task.h  tasks.h  types.h  utils.h
scripts/: prepare_test_data.sh
src/: GPU_config.cpp  GPU_info.cpp  MIG_manager.cpp  main.cpp  profiler.cpp  scheduler.cpp  tasks.cpp  utils.cpp
test/data/: kernels_rodinia.txt
